한국의 전통 한지를 배경으로 적용함

--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
     </footer>
 
     <script src="./script.js"></script>
+    <script type="module">
+      import { Hanji } from './scriptHanji.js';
+      
+      // 한지 배경 초기화
+      const hanjiBackground = new Hanji();
+      hanjiBackground.start();
+    </script>
   </body>
   </html>
 
