--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
         <p class="kicker">안녕하세요, 저는</p>
         <h1 class="title">JH Kim<span class="accent">.</span></h1>
         <p class="subtitle">사용자 경험을 중시하는 개발자입니다. 간결한 코드와 명확한 문제 해결을 좋아합니다.</p>
-        <div class="hero-actions">
-          <a class="btn primary" href="#projects">작업 보기</a>
-          <a class="btn" href="#contact">연락하기</a>
-        </div>
       </section>
 
       <section id="about" class="section">
@@ -54,6 +50,19 @@
         <h2>프로젝트</h2>
         <div class="projects">
           <article class="card">
+            <div class="card-header">
+              <img src="assets/KimsDeskClockIcon.ico" alt="Kim's Desk Clock 아이콘" class="card-icon" width="48" height="48">
+              <h3><a href="https://apps.microsoft.com/detail/9nj0c8pzzznn?hl=ko-KR&gl=KR" target="_blank" rel="noopener" aria-label="Microsoft Store에서 Kim's Desk Clock 보기">Kim's Desk Clock</a></h3>
+            </div>
+            <p>Windows용 미니멀 아날로그 데스크톱 시계 앱. 사용자 배경 이미지 지원, 알람 관리자, 다양한 테마와 시계 페이스를 제공합니다. 항상 위 표시, 크기 조절 등 데스크톱 환경에 최적화된 생산성 도구입니다.</p>
+            <div class="meta">
+              <span>Windows</span><span>Desktop App</span><span>생산성</span>
+            </div>
+            <div style="margin-top: 12px;">
+              <a class="btn" href="https://apps.microsoft.com/detail/9nj0c8pzzznn?hl=ko-KR&gl=KR" target="_blank" rel="noopener" aria-label="Microsoft Store에서 Kim's Desk Clock 보기">Microsoft Store</a>
+            </div>
+          </article>
+          <article class="card">
             <h3>미니 포트폴리오</h3>
             <p>이 페이지입니다. 순수 HTML/CSS/JS로 구성된 가벼운 소개 사이트.</p>
             <div class="meta">
@@ -61,10 +70,10 @@
             </div>
           </article>
           <article class="card">
-            <h3>컴포넌트 실험실</h3>
-            <p>접근성 패턴과 인터랙션을 실험하는 UI 컴포넌트 모음.</p>
+            <h3>한지 배경 모듈</h3>
+            <p>한국의 전통 종이, 한지를 디지털로 재현한 배경 생성 모듈입니다. 프랙탈 노이즈로 닥나무 펄프의 구름 같은 질감을 구현하고, 벡터 섬유로 매번 다른 자연스러운 텍스처를 그려냅니다. 다크 모드에서는 촛불이 한지를 비추는 은은한 분위기를 연출하여 전통과 현대의 조화를 보여줍니다. 완전 자립형으로 별도 이미지 없이 순수 코드만으로 동작합니다.</p>
             <div class="meta">
-              <span>a11y</span><span>Design System</span>
+              <span>Canvas</span><span>프랙탈 노이즈</span><span>한지</span><span>전통</span>
             </div>
           </article>
         </div>
@@ -74,9 +83,8 @@
         <h2>연락처</h2>
         <p>협업 제안이나 문의가 있다면 언제든지 연락 주세요.</p>
         <div class="contact-actions">
-          <a class="btn primary" href="mailto:hello@jh.dev" aria-label="이메일 보내기">이메일</a>
+          <a class="btn primary" href="mailto:kimscoder@gmail.com" aria-label="이메일 보내기">이메일</a>
           <a class="btn" href="https://github.com/" target="_blank" rel="noopener" aria-label="GitHub 열기">GitHub</a>
-          <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="LinkedIn 열기">LinkedIn</a>
         </div>
       </section>
     </main>
