interactive navigator를 가져 옴

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <ul class="nav-links">
           <li><a href="#about">소개</a></li>
           <li><a href="#projects">프로젝트</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle">취미생활</a>
+            <ul class="dropdown-menu">
+              <li><a href="#" class="dropdown-item" data-action="interactive-story-navigator">interactive story navigator</a></li>
+            </ul>
+          </li>
           <li><a href="#contact">연락처</a></li>
         </ul>
       </nav>
