--- a/picture_puzzle_game/picture_puzzle_game.html
+++ b/picture_puzzle_game/picture_puzzle_game.html
@@ -18,8 +18,9 @@
             </div>
             <!-- Pieces will be injected here as absolute elements -->
         </div>
-        <div class="controls">
+        <div class="controls" id="controls">
             <button id="reset-btn" class="btn">다시 하기 (Reset)</button>
+            <button id="change-image-btn" class="btn">다른 그림 선택</button>
         </div>
         <div id="message" class="message"></div>
     </div>
