--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
       <section id="contact" class="section">
         <h2>연락처</h2>
-        <p>협업 제안이나 문의가 있다면 언제든지 연락 주세요.</p>
+        <p>궁금한 점이나 이야기하고 싶은 것이 있으시면 언제든지 연락 주세요.</p>
         <div class="contact-actions">
           <a class="btn primary" href="mailto:kimscoder@gmail.com" aria-label="이메일 보내기">이메일</a>
           <a class="btn" href="https://github.com/" target="_blank" rel="noopener" aria-label="GitHub 열기">GitHub</a>
