상단 메뉴를 핸드폰에서는 햄버거 메뉴로 변경함

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <nav class="nav">
         <a class="logo" href="#home" aria-label="JH Kim 홈으로 이동">JH Kim</a>
         <button id="theme-toggle" class="theme-toggle" aria-label="테마 전환">🌓</button>
-        <ul class="nav-links">
+        <button id="mobile-menu-toggle" class="mobile-menu-toggle" aria-label="메뉴 열기">☰</button>
+        <ul class="nav-links" id="nav-links">
           <li><a href="#about">소개</a></li>
           <li><a href="#projects">프로젝트</a></li>
           <li class="dropdown">
