--- a/picture_puzzle_game/picture_puzzle_game.html
+++ b/picture_puzzle_game/picture_puzzle_game.html
@@ -26,6 +26,14 @@
             <button id="change-image-btn" class="btn">다른 그림 선택</button>
         </div>
         <div id="message" class="message"></div>
+        
+        <!-- 게임 히스토리 섹션 -->
+        <div id="game-history-section" class="game-history-section hidden">
+            <h2>게임 히스토리</h2>
+            <div id="history-container" class="history-container">
+                <!-- 히스토리 항목들이 여기에 동적으로 추가됩니다 -->
+            </div>
+        </div>
     </div>
 
     <!-- 완성 팝업 -->
@@ -37,7 +45,33 @@
             <h2>축하합니다! 🎉</h2>
             <p class="completion-message">모든 퍼즐을 맞추셨습니다!</p>
             <p class="completion-time">완성 시간: <span id="final-time">00:00</span></p>
-            <button id="close-popup" class="btn primary">확인</button>
+            <div class="popup-buttons">
+                <button id="close-popup" class="btn primary">확인</button>
+                <button id="save-result-btn" class="btn secondary">게임결과저장</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 게임 결과 저장 팝업 -->
+    <div id="save-result-popup" class="completion-popup hidden">
+        <div class="popup-content">
+            <h2>게임 결과 저장</h2>
+            <p class="current-completion-time" id="current-completion-time">완성 시간: <span id="save-popup-time">00:00</span></p>
+            <div class="popup-section">
+                <label for="player-name-input" style="display: block; margin-bottom: 10px; font-size: 1.1rem; color: #333;">이름을 입력하세요:</label>
+                <input type="text" id="player-name-input" class="name-input" placeholder="이름 입력" maxlength="20">
+            </div>
+            <div class="popup-buttons">
+                <button id="confirm-save-btn" class="btn primary">저장</button>
+                <button id="cancel-save-btn" class="btn secondary">취소</button>
+            </div>
+            <!-- 같은 이미지의 이전 게임 결과 목록 -->
+            <div id="same-image-history" class="same-image-history">
+                <h3 style="font-size: 1.2rem; color: var(--primary-color); margin-top: 20px; margin-bottom: 10px;">이전 게임 기록</h3>
+                <div id="same-image-history-list" class="same-image-history-list">
+                    <!-- 같은 이미지의 게임 결과가 여기에 표시됩니다 -->
+                </div>
+            </div>
         </div>
     </div>
 
