"경계 검증 보기" 버튼을 화면에서 숨김

--- a/picture_puzzle_game/picture_puzzle_game.html
+++ b/picture_puzzle_game/picture_puzzle_game.html
@@ -25,7 +25,7 @@
             <button id="reset-btn" class="btn">다시 하기 (Reset)</button>
             <button id="change-image-btn" class="btn">다른 그림 선택</button>
             <button id="hint-btn" class="btn secondary">힌트 보기 (Hint)</button>
-            <button id="debug-visualize-btn" class="btn secondary">경계 검증 보기</button>
+            <button id="debug-visualize-btn" class="btn secondary hidden">경계 검증 보기</button>
         </div>
         <div id="message" class="message"></div>
         
